--- a/assets/css/responesive.css
+++ b/assets/css/responesive.css
@@ -11,13 +11,6 @@
         flex-basis: 90%;
     }
 }
-
-@media (max-width: 611px){
-    body{
-        width: 611px;
-    }
-}
-
 /* Tablet */
 
 @media (min-width: 768px) and (max-width: 1100px){
@@ -29,7 +22,7 @@
     }
     #heading .heading__nav{
         flex-basis: 90%;
-    }
+}
     #infomation{
         height: 2000px;
     }
@@ -40,7 +33,7 @@
 
 /* Smartphone */
 
-@media (max-width: 767px){
+@media (max-width: 767px){ 
     .heading__nav .nav__nav-bar,
     .heading__nav .nav__log-in
     {
@@ -48,28 +41,57 @@
     }
     #heading .heading__nav{
         justify-content: flex-end;
+        margin-right: 8px;
     }
     #infomation{
         height: 2000px;
-    }
+    } 
     .list-place{
         padding-top: 930px;
     }
-    /* #infomation{
-        height: 1300px;
-    } */
-    /* .list-place{
-        padding-top: 600px;
+
+}
+@media (min-width: 631px){
+   .who-list--box{
+        display: none;
+    } 
+}
+
+@media (max-width: 630px){
+    #infomation{
+        height: auto;
     }
-    .who__who-list .who-list--heading{
-        width: 100%;
-        font-size: 50px;
+    .info-place .info-place__where,
+    .info-place .info-place__when{
+        display: none;
     }
-    .who__who-list .who-list--subheading{
-        width: 100%;
+    .info-place .info-place__who{
+        flex-basis: 100%;
+        max-height: none;
+    }
+    .info-place .who__who-list{
+        margin-left: 0;
+        left: 0;
     }
     .who__who-list .who-list__img{
         width: 100%;
-    } */
-
+        height: auto;
+    }   
+    .who__who-list .who-list--heading{
+        font-size: 46px;
+        width: 100%;
+        transform: translateY(20px);
+    }
+    .who__who-list .who-list--subheading{
+        font-size: 20px;
+        width: 100%;
+        transform: translateY(85px);
+    }
+    /* content */
+    .content__img .img--right img {
+        transform: translate(0px, -5px)
+    }
+    .content__img .img--left img{
+        transform: translate(-10px, 30px);
+    }
 }
