--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,13 +148,13 @@ li{
     width: 100%;
     display: flex;
     flex-direction: column;
-    height: 1441px;
+    height: 100%;
 }
 
 /* info-place */
 
 #infomation .info-place{
-    flex: 1.2;
+    flex: 1.30;
     display: flex;
 }
 
@@ -281,10 +281,10 @@ li{
 }
 /* Content */
 #content{
-    height: 1000px;
     background-color: var(--sub-color-website);
     display: flex;
     flex-direction: column;
+    margin-top: 200px;
 }
 
 #content .content__info{
@@ -366,14 +366,14 @@ li{
 
 /* Playlist */
 
-#playlist{
+/* #playlist{
 
-}
+} */
 
 /* Location */
-#location{
+/* #location{
 
-}
+} */
 
 /* footer */
 
